--- a/informatica/manipulando.html
+++ b/informatica/manipulando.html
@@ -1,1 +1,149 @@
-manipulando
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+
+
+
+<div class="js-side-left">
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
+  <p>O Computador</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
+  <p>Introdução ao Windows</p>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
+  <p>Introdução à Internet</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
+  <p>Introdução ao Office</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
+  <p>Introdução à Informática Avançada</p>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <p>O Sistema Operacional</p>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
+  <p>Próximos Passos</p>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
+  <p>O Autor</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
+</div>
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="https://www.jorgesouza.com.br/informatica/acessorios" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/msedge" class="js-button" style="float: right;">Próximo</a>
+
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Manipulando Textos</h1>
+<p>	A prática em escrever num computador pode ser desenvolvida dando uma habilidade extra ao usuário. Existem cursos muito bem elaborados de datilografia ou digitação. Mas para quem não pretende se aprofundar tanto na digitação existem softwares e sites onde se pode praticar livremente, como, por exemplo, estes sites:</p>
+<a class="js-button" href="https://www.typingclub.com" target="_blank">https://www.typingclub.com</a>
+<a class="js-button" href="https://www.typingtest.com/" target="_blank">https://www.typingtest.com/</a>
+<a class="js-button" href="https://sense-lang.org/" target="_blank">https://sense-lang.org/</a>
+
+<p>Existem diversos outros sites onde é possível treinar a digitação, mas antes de tudo é bom pesquisar um pouco sobre como começar para saber como posicionar as mãos sobre o teclado.</a>
+
+<h2>WordPad</h2>
+<p>	Para digitar nossos textos a princípio vamos utilizar o Wordpad, que pode ser encontrado na pasta Acessórios do Windows no menu Iniciar.
+<p>	O Wordpad possui recursos básicos de formatação de texto. A formatação de texto consiste em alterar as propriedades de Fonte, Estilo de Caractere e Estilo de Parágrafo de modo a tornar o texto apresentável esteticamente.
+<p>	Para nossa primeira formatação, abra o Wordpad e digite o texto a seguir, salve o arquivo com o nome Poema Neruda, dentro da pasta com o seu nome em Documentos.</p>
+<code style="text-align: center;">
+Não te quero senão porque te quero<br>
+e de querer-te a não querer-te chego<br>
+e de esperar-te quando não te espero<br>
+passa meu coração do frio ao fogo.<br>
+Quero-te apenas porque a ti eu quero,<br>
+a ti odeio sem fim e, odiando-te, te suplico,<br>
+e a medida do meu amor viajante<br>
+é não ver-te e amar-te como um cego.<br>
+Consumirá talvez a luz de Janeiro,<br>
+o seu raio cruel, meu coração inteiro,<br>
+roubando-me a chave do sossego.<br>
+Nesta história apenas eu morro<br>
+e morrerei de amor porque te quero,<br>
+porque te quero, amor, a sangue e fogo.<br>
+<i>Pablo Neruda</i>
+</code>
+
+<p>	Na imagem abaixo temos a Barra de Estilo de Caractere, na primeira linha temos a caixa com as fontes, onde está selecionada a fonte Garamond e logo depois temos o tamanho da fonte, configurado como 11. Na segunda linha temos os estilos de caractere, na ordem: Negrito, Itálico, Sublinhado, Tachado, Subscrito e Sobrescrito, e em seguida as cores da letra e de fundo.
+<p>	Formataremos nosso poema como Garamond 11 Itálico. Isso significa que o texto terá uma fonte Garamond, tamanho 11 e estilo Itálico. Para tal, selecione todo o texto antes de alterar as propriedades, ou clicando e arrastando do início até o final, ou usando o atalho Ctrl+T. 
+
+<img src="manipulando.png">
+
+<p>	Já alteramos a fonte e o estilo de caractere, agora alteraremos o estilo de parágrafo, a caixa de estilos de parágrafo fica logo ao lado da de caractere, veja-a na imagem abaixo:
+
+<img src="manipulando2.png">
+
+<p>	Ela também possui duas linhas, na primeira linha temos os botões de aumentar e diminuir a tabulação, que é o recuo ou espaço à direita do parágrafo em relação à margem. O terceiro botão tem os estilos de lista, ordenada e não ordenada. O quarto botão altera o tamanho de espaço entre as linhas. Na segunda linha da caixa de estilos de parágrafo temos os quatro botões com o alinhamento do parágrafo, à esquerda, à direita, centralizado e justificado. O modo justificado mantém as linhas com o mesmo tamanho.
+<p>	No nosso poema a única coisa que alteraremos no parágrafo é o alinhamento, que colocaremos como centralizado.
+
+
+<!-- #endregion -->
+
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
