--- a/informatica/pesquisa.html
+++ b/informatica/pesquisa.html
@@ -1,1 +1,144 @@
-pesquisa
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+
+
+
+<div class="js-side-left">
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
+  <p>O Computador</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
+  <p>Introdução ao Windows</p>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
+  <p>Introdução à Internet</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
+  <p>Introdução ao Office</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
+  <p>Introdução à Informática Avançada</p>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <p>O Sistema Operacional</p>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
+  <p>Próximos Passos</p>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
+  <p>O Autor</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
+</div>
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="https://www.jorgesouza.com.br/informatica/msedge" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos" class="js-button" style="float: right;">Próximo</a>
+
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Pesquisa na Web</h1>
+<p>	Pesquisar na internet é muito fácil, para isto basta uma ferramenta de busca como o Google ou o Bing. Para acessar o Google digitamos na Barra de Endereços e busca do Edge, o site Google.com, ou https://www.google.com.br. Para acessar o Bing podemos digitar Bing.com ou https://www.bing.com. Geralmente ao abrir um navegador basta digitar o que queremos buscar e pressionar Enter que o navegador já fará a busca usando a ferramenta de busca padrão. A ferramenta de busca padrão para o Edge é o Bing pois é o serviço de busca da Microsoft, para alterá-lo podemos digitar na Barra de Endereço: edge://settings/searchEngines e escolher o mecanismo de busca preferencial.
+
+<p class="notas">Curiosidade: ao fazermos buscas no Bing estando logado numa conta Microsoft acumulamos pontos que podem ser convertidos em brindes ou em doações para ongs.</p>
+
+<p>	As pesquisas em mecanismos de busca como o Bing e o Google podem ser feitas de diversas maneiras, veremos algumas.
+
+<p>	Para pesquisarmos usamos palavras chaves, por exemplo: “filhote de cachorro”, são três palavras chaves diferentes que o mecanismo irá unir buscando o máximo de combinações possíveis, os primeiros resultados exibidos serão os mais acessados que contenham todas as três palavras.
+<p>	Ao pesquisarmos podemos escolher filtros de busca, os filtros principais são por tipo, podemos escolher entre:
+<p>Imagens:
+<p>	Exibe imagens relacionadas às palavras chaves.
+<p>Vídeos:
+<p>	Exibe vídeos relacionadas às palavras chaves.
+<p>Notícias:
+<p>	Exibe páginas de sites de notícias com as palavras chave.
+<p>Mapas:
+<p>	Exibe localizações e rotas relacionadas com a busca. 
+<p>Compras:
+<p>	Exibe produtos em sites de compras relacionados com a busca.
+<p>	Alguns mecanismos oferecem ainda outras opções de busca. Caso desejemos pesquisar dentro de um site específico utilizando o google podemos usar a palavra site, assim:
+<code>filhote de cachorro site:pixabay.com</code>
+<p>No exemplo acima, o buscador procurará por resultados para “filhote de cachorro”, dentro do site pixabay.com.
+<p>	Se utilizarmos as palavras chaves entre aspas no Google, as buscas só retornarão resultados que contenham exatamente o que escrevemos, o que não ocorre sem as aspas, que inclui páginas que contenham apenas uma ou outra palavra.
+
+<h2>A Internet</h2>
+<p>	A internet consiste numa comunicação a nível global entre computadores identificados por meio de Ips, esta comunicação pode se dar por cabo, fibra ótica, satélite etc.
+<p>	As páginas Web da internet são armazenadas em computadores chamados servidores, e possuem seus IPs convertidos em nomes de domínio (como google.com por exemplo) por um serviço chamado de DNS (Sistema de Nome de Domínio).
+<p>	A forma como escrevemos um site, ou seu URL pode nos ajudar a compreender como a internet funciona. Um URL (Uniform Resource Locator) é o endereço ou o localizador de um recurso na rede mundial. Peguemos como exemplo o URL do site:</p>
+<code>https://www.mercadolivre.com.br/</code>
+<p><span class="codigo">https://</span> Protocolo de Transferência de Hiper-Texto Seguro, é o protocolo que cuida da comunicação entre páginas web, servidores e dispositivos com uma camada de segurança que protege a integridade e confidencialidade das informações. Geralmente ao acessarmos uma página http, isto é, sem a camada de segurança extra, nosso navegador acusará que a página não é segura de visitar ou até bloqueará o acesso.
+<p><span class="codigo">www</span>: World Wide Web ou Grande Rede Mundial, conhecida ainda como Rede Mundial de Computadores refere-se à conexão e os mecanismos que estão por trás da troca de informações em rede. A referência à www atualmente não é obrigatória nos URLs dos sites.
+<p><span class="codigo">.mercadolivre</span>: Nome do domínio.
+<p><span class="codigo">.com</span>: Extensão. Identifica a natureza ou propósito da página. Um site pode possuir uma extensão comercial .com ou diversas outras como .net, .org, .gov, etc.
+<p><span class="codigo">.br</span>: Brasil. Identifica a localização do site e seu idioma. Um mesmo site pode possuir versões para diversos idiomas.
+
+<p>	Após o .br/ ou após o .com/ podemos ter ainda mais informações no URL, nesse caso, elas direcionarão o usuário para páginas, serviços, ou opções, dentro do site principal.
+
+
+
+<!-- #endregion -->
+
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
