--- a/informatica/explorador.html
+++ b/informatica/explorador.html
@@ -1,1 +1,222 @@
-explorador
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+
+
+
+<div class="js-side-left">
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
+  <p>O Computador</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
+  <p>Introdução ao Windows</p>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
+  <p>Introdução à Internet</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
+  <p>Introdução ao Office</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
+  <p>Introdução à Informática Avançada</p>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <p>O Sistema Operacional</p>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
+  <p>Próximos Passos</p>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
+  <p>O Autor</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
+</div>
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="https://www.jorgesouza.com.br/informatica/configuracoes" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/teclado" class="js-button" style="float: right;">Próximo</a>
+
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Explorador de Arquivos</h1>
+
+<img src="explorador.png">
+
+<p>	O Explorador de Arquivos é um gerenciador de pastas e arquivos e é a parte principal do Microsoft Windows, todo o aprendizado em informática começa com o aprendizado do gerenciamento de pastas e arquivos. Na Área de Trabalho já contamos com algumas pastas básicas como Documentos (chamada em versões anteriores do Windows de Meus Documentos). Ao dar um duplo-clique no ícone de Documentos a pasta será aberta exibindo os arquivos que possivelmente estejam salvos dentro dela.</p>
+<p>	Para abrir o Explorador de Arquivos temos várias opções:</p>
+<h2>Abrindo o Explorador por meio de tecla de atalho</h2>
+<p>	Mantenha pressionada a tecla do Windows ⊞ e aperte a letra E.</p>
+<h2>Abrindo o Explorador pelo Menu Iniciar</h2>
+<p>	Clique em Iniciar → Abaixo do ícone do usuário, próximo do botão de desligar, clique em Documentos.</p>
+
+<h2>Abrindo o Explorador pelo Menu Iniciar</h2>
+<p>	Clique em Iniciar → Desça a lista e selecione Sistema do Windows → Clique em Explorador de Arquivos. </p>
+
+<h2>Barra de Títulos</h2>
+<p>	Na extremidade superior direita da tela temos três ícones, respectivamente:</p>
+<p>− Minimizar</p>
+<p>❐ Restaurar</p>
+<p>▢ Maximizar</p>
+<p>❌ Fechar</p>
+<p>	Estes ícones se encontram numa barra horizontal chamada Barra de Títulos, que costuma conter além de algumas opções, o título da pasta ou programa que está aberto. Estes três ícones servem para:</p>
+<p>Minimizar: Minimiza a janela atual sem fechá-la, o ícone permanece na Barra de Tarefas por onde é possível acessá-lo novamente.</p>
+<p>Centralizar: Redimensiona a janela atual permitindo que duas janelas sejam exibidas ao mesmo tempo. Aparece quando a janela está maximizada, ou seja, preenchendo completamente a tela.</p>
+<p>Maximizar: Aparece quando uma janela está centralizada, serve para expandir a janela de forma que preencha toda a tela.</p>
+<p>Fechar: Serve para fechar a janela ou programa aberto, em casos de estarmos editando um arquivo, antes de clicar em fechar devemos salvar o arquivo para que alterações não sejam perdidas.</p>
+<p class="notas">Praticamente todos os programas no Windows possuem uma barra de título com estes três ícones.</p>
+
+
+<h2>Arquivos e Pastas</h2>
+<p>	No Explorador de Arquivos podemos criar e organizar nossas pastas e arquivos, o que pode ser feito através da Faixa de Opções (conjunto de botões na parte superior do Explorador), ou através de algumas opções do menu de contexto, que surge com o clique do botão direito do mouse na área vazia ou sobre um item. Entre essas opções, algumas utilizaremos com frequência, como: criar arquivos e pastas, excluir, renomear ou alterar, mover, copiar, reciclar e restaurar. Veremos com detalhe essas operações a partir de agora.</p>
+
+<h2>Criando uma pasta na Área de Trabalho</h2>
+    <p>1. Feche qualquer programa ou pasta que esteja aberto.</p>
+    <p>2. Clique numa área vazia da Área de Trabalho com o botão direito do mouse.</p>
+    <p>3. Pare o mouse sobre a opção Novo.</p>
+    <p>4. Clique em Pasta.</p>
+    <p>5. Digite um nome para a pasta e pressione Enter.</p>
+    <p>6. Pronto! Você acabou de criar uma pasta, para entrar nela, dê um clique duplo com o botão esquerdo do mouse.</p>
+    <p>7. Agora feche a pasta clicando no botão fechar no canto superior direito da tela.</p>
+    <p>8. Clique com o botão direito do mouse sobre a pasta na Área de Trabalho.</p>
+    <p>9. Clique na opção Excluir. Se for solicitado confirmação, clique em Sim. </p>
+
+<h2>Criando uma pasta em Documentos</h2>
+    <p>1. Clique em Iniciar → Abaixo do ícone do usuário, próximo do botão de desligar, clique em Documentos.</p>
+    <p>2. Com a pasta Documentos aberta vamos executar o mesmo processo de forma diferente.</p>
+    <p>3. Na Faixa de Opções procure pelo ícone com o nome Nova Pasta e clique.</p>
+    <p>4. Nomeie a pasta que acabou de criar e pressione Enter.</p>
+    <p>5. Dê um duplo-clique sobre ela para abri-la.</p>
+    <p>6. Agora você está dentro da pasta que criou, note o título na Barra de Títulos.</p>
+    <p>7. Procure pelo ícone Voltar, representado por uma seta apontando para a esquerda, que se encontra do lado esquerdo da tela, logo abaixo da Faixa de Opções. Clique nele para voltar para Documentos.</p>
+    <p>8. Clique sobre a pasta que criou.</p>
+    <p>9. Na Faixa de Opções procure pelo ícone Excluir e clique. Se for solicitado confirmação clique em Sim.</p>
+
+<h2>Criando um arquivo</h2>
+<p>	Agora vamos criar um arquivo simples de texto:</p>
+    <p>1. Clique com o botão direito do mouse sobre uma área vazia da pasta.</p>
+    <p>2. Leve o cursor do mouse até a opção Novo.</p>
+    <p>3. Selecione a opção Documento de Texto.</p>
+    <p>4. Nomeie o arquivo que você acabou de criar.</p>
+    <p>5. Com um clique simples, selecione o arquivo.</p>
+    <p>6. Pressione a tecla Enter para abrir.</p>
+    <p>7. Veja que foi aberto um editor simples de texto chamado Bloco de Notas, veremos mais sobre ele à frente.</p>
+    <p>8. Digite seu nome completo dentro do editor.</p>
+    <p>9. Veja que o editor tem uma Barra de Título assim como o explorador, na Barra de Título temos o nome do arquivo e do programa, Novo documento de texto – Bloco de Notas, e os ícones para minimizar, maximizar e fechar.</p>
+    <p>10. Clique no botão para fechar. Será pedido para salvar as alterações, clique em Salvar.</p>
+
+<h2>Renomear pastas e arquivos</h2>
+<p>	Agora que fechamos, estamos de volta ao explorador, com um clique simples selecione o arquivo de texto. Veja que você pode tirar a seleção clicando numa área vazia e voltar a selecionar clicando no arquivo, experimente algumas vezes.</p>
+    <p>1. Clique com o botão direito do mouse sobre o arquivo.</p>
+    <p>2. Clique na opção Renomear.</p>
+    <p>3. Digite Nome.</p>
+    <p>4. Pressione Enter ou clique em uma área vazia.</p>
+
+<h2>Copiar e Mover pastas e arquivos</h2>
+<p>	Para copiar arquivos ou pastas o método é simples:</p>
+    <p>1. Clique com o botão direito sobre o arquivo de texto que criamos.</p>
+    <p>2. Selecione a opção Copiar.</p>
+    <p>3. Minimize a janela do explorador clicando no ícone - no canto superior direito da tela.</p>
+    <p>4. Na Área de Trabalho, clique com o botão direito sobre uma área vazia.</p>
+    <p>5. Selecione Colar.</p>
+    <p>6. Você colou uma cópia do arquivo na Área de Trabalho, mas é possível colá-lo onde quiser e quantas vezes desejar.</p>
+
+<p>	Perceba que na Barra de Tarefas o ícone do explorador permanece, isso porque ele foi minimizado e não fechado. Clique no ícone para maximizá-lo novamente.</p>
+<p>	Veja que o arquivo de texto ainda está lá, isso porque criamos uma cópia na Área de Trabalho. Com as opções Copiar e Colar, o arquivo original permanece. Vamos mover o arquivo original:</p>
+    <p>1. Clique com o botão direito sobre o arquivo de texto dentro da pasta Documentos.</p>
+    <p>2. Selecione Recortar.</p>
+    <p>3. Minimize a janela.</p>
+    <p>4. Na Área de Trabalho clique com o botão direito sobre uma área vazia.</p>
+    <p>5. Selecione Colar.</p>
+    <p>6. Como já existe um arquivo com o mesmo nome, o Windows perguntará se deseja substituir o arquivo existente. Clique em Substituir o arquivo no destino.</p>
+<p>Pronto, movemos o arquivo de Documentos para Área de Trabalho. Se você voltar para Documentos verá que ele não está mais lá.</p>
+
+<h2>Excluir pasta ou arquivo</h2>
+<p>	Excluir um arquivo ou pasta é igualmente simples:</p>
+    <p>1. Na Área de Trabalho, clique com o botão direito sobre o arquivo de texto → Selecione Excluir.</p>
+    <p>2. Em alguns casos pode ser solicitado confirmação, se for, clique em sim.</p>
+<p>	No Windows, os arquivos excluídos não são perdidos definitivamente, mas vão para um local temporário, a Lixeira.</p>
+<p>	Para ver o arquivo que você excluiu, ainda na Área de Trabalho, localize o ícone da Lixeira e dê um duplo-clique nela.</p>
+<p>	Agora você pode ver os arquivos que excluiu.</p>
+
+<h2>Lixeira</h2>
+<p>	Na Lixeira, podemos tanto excluir definitivamente um arquivo ou vários, quanto restaurá-los para o local em que estavam quando foram excluídos, ainda temos a opção de esvaziar a Lixeira removendo definitivamente todos os arquivos que se encontram nela.</p>
+    <p>1. Clique com o botão direito sobre o arquivo que você excluiu.</p>
+    <p>2. Selecione Restaurar.</p>
+    <p>3. Agora, minimize a Lixeira e volte para a Área de Trabalho, veja que o arquivo está lá novamente. Exclua-o mais uma vez.</p>
+    <p>4. Maximize a Lixeira para abri-la novamente.</p>
+    <p>5. Agora, clique com o botão direito sobre uma área vazia.</p>
+    <p>6. Selecione Esvaziar Lixeira.</p>
+    <p>7. Na caixa de confirmação que aparecerá, clique em Sim.</p>
+    <p>8. Pronto! Excluímos definitivamente todos os arquivos da Lixeira.</p>
+
+<p class="notas">	Detalhe: Os arquivos que permanecem na Lixeira ainda ocupam o mesmo espaço de memória que ocupavam antes de serem excluídos! Esse espaço só é liberado quando a Lixeira é esvaziada.</p>
+
+<p>	Feche a lixeira e todas as outras janelas que estão minimizadas na Barra de Tarefas.</p>
+
+
+<!-- #endregion -->
+
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
