--- a/informatica/unidades.html
+++ b/informatica/unidades.html
@@ -1,1 +1,117 @@
-unidades
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+
+
+
+<div class="js-side-left">
+  <a href="https://www.jorgesouza.com.br/informatica/intro">Introdução</a>
+  <p>O Computador</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oque">O que é um computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/software">Software e Hardware</a>
+  <a href="https://www.jorgesouza.com.br/informatica/gabinete">Gabinete e Periféricos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/processador">Processador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/placamae">Placa Mãe</a>
+  <a href="https://www.jorgesouza.com.br/informatica/discorigido">Disco Rígido e Disco Sólido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/memoriaram">Memória RAM</a>
+  <p>Introdução ao Windows</p>
+  <a href="https://www.jorgesouza.com.br/informatica/umpouco">Um pouco de História</a>
+  <a href="https://www.jorgesouza.com.br/informatica/oconceito">O Conceito de Janela</a>
+  <a href="https://www.jorgesouza.com.br/informatica/areatrabalho">Área de Trabalho</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mouse">Mouse</a>
+  <a href="https://www.jorgesouza.com.br/informatica/barratarefas">Barra de Tarefas e Menu Iniciar</a>
+  <a href="https://www.jorgesouza.com.br/informatica/configuracoes">Configurações do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/explorador">Explorador de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/teclado">Teclado</a>
+  <a href="https://www.jorgesouza.com.br/informatica/unidades">Unidades de Armazenamento</a>
+  <a href="https://www.jorgesouza.com.br/informatica/acessorios">Acessórios do Windows</a>
+  <a href="https://www.jorgesouza.com.br/informatica/manipulando">Manipulando Textos</a>
+  <p>Introdução à Internet</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msedge">Microsoft Edge</a>
+  <a href="https://www.jorgesouza.com.br/informatica/pesquisa">Pesquisa na Web</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadarquivos">Download de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/downloadapps">Download de Aplicativos e Programas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/google">Google</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msaccount">Conta Microsoft</a>
+  <a href="https://www.jorgesouza.com.br/informatica/sitesuteis">Sites Úteis</a>
+  <a href="https://www.jorgesouza.com.br/informatica/cachecookies">Cache e Cookies</a>
+  <p>Introdução ao Office</p>
+  <a href="https://www.jorgesouza.com.br/informatica/msword">Microsoft Word</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspowerpoint">Microsoft PowerPoint</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msexcel">Microsoft Excel</a>
+  <a href="https://www.jorgesouza.com.br/informatica/mspublisher">Microsoft Publisher</a>
+  <p>Introdução à Informática Avançada</p>
+  <a href="https://www.jorgesouza.com.br/informatica/esteja">Esteja protegido</a>
+  <a href="https://www.jorgesouza.com.br/informatica/senhas">Senhas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/nuvem">Serviços de Nuvem</a>
+  <a href="https://www.jorgesouza.com.br/informatica/instalacao">Instalação e Desinstalação de Aplicativos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/msdefender">Microsoft Defender</a>
+  <a href="https://www.jorgesouza.com.br/informatica/taskmgr">Gerenciador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/saude">Saúde do Computador</a>
+  <a href="https://www.jorgesouza.com.br/informatica/limpezadisco">Limpeza de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verdisco">Verificação de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/verarquivos">Verificação de Arquivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/seguranca">Modo de Segurança</a>
+  <a href="https://www.jorgesouza.com.br/informatica/restauracao">Restauração, Backup e Formatação</a>
+  <p>O Sistema Operacional</p>
+  <a href="https://www.jorgesouza.com.br/informatica/raiz">A Pasta Raiz</a>
+  <a href="https://www.jorgesouza.com.br/informatica/log">Log de Eventos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/servicos">Serviços</a>
+  <a href="https://www.jorgesouza.com.br/informatica/drivers">Drivers e Dispositivos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/agendador">Agendador de Tarefas</a>
+  <a href="https://www.jorgesouza.com.br/informatica/diskmgmt">Gerenciamento de Disco</a>
+  <a href="https://www.jorgesouza.com.br/informatica/powershell">Microsoft PowerShell</a>
+  <a href="https://www.jorgesouza.com.br/informatica/rede">Rede e Compartilhamento</a>
+  <p>Próximos Passos</p>
+  <a href="https://www.jorgesouza.com.br/informatica/proximos">Próximos passos</a>
+  <a href="https://www.jorgesouza.com.br/informatica/dev">Desenvolvimento de Software</a>
+  <a href="https://www.jorgesouza.com.br/informatica/design">Design Gráfico</a>
+  <a href="https://www.jorgesouza.com.br/informatica/opensource">Software Livre</a>
+  <p>O Autor</p>
+  <a href="https://www.jorgesouza.com.br/informatica/oautor">O Autor</a>
+</div>
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="https://www.jorgesouza.com.br/informatica/teclado" class="js-button">Anterior</a>
+    <a href="https://www.jorgesouza.com.br/informatica/acessorios" class="js-button" style="float: right;">Próximo</a>
+
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Unidades de Armazenamento</h1>
+<img src="unidades.png">
+
+<p>Unidades de armazenamento são os locais onde os arquivos são salvos, podem ser internas, como HDs e SSDs ou podem ser externas como pen-drives, CDs, HDs externos e SSDs externas.</p>
+<p>Quando conectamos uma unidade de armazenamento externa ao computador, geralmente o sistema exibe uma caixa de diálogo ou abre sua pasta imediatamente, mas estas unidades podem ser acessadas em Este Computador, ou Computador no Explorador de Arquivos.</p>
+<p>Devemos ter em mente que ao conectarmos uma unidade externa como um pen-drive, geralmente ela começa a receber corrente elétrica da placa mãe e passa a gravar e receber arquivos de sistema, para desconectá-la, todos estes processos devem ser encerrados. Para remover uma unidade externa com segurança podemos clicar com o botão direito sobre essa unidade em Computador e selecionar a opção Ejetar, o sistema exibirá uma mensagem indicando quando a remoção segura é possível, o que geralmente ocorre em segundos.</p>
+<p>Podemos salvar arquivos em unidades externas ou copiá-los para dentro dela da mesma maneira como fazemos com qualquer outra pasta, e ao desconectá-la do computador poderemos carregar estes arquivos para onde quisermos e acessá-los em outro computador, desde que possua os aplicativos necessários para exibir o formato de arquivo (Caso o arquivo tenha sido criado com um aplicativo que não venha por padrão no Windows).</p>
+<p>Ao clicarmos com o botão direito do mouse sobre uma unidade de armazenamento em Este Computador, algumas opções serão apresentadas, como Abrir, Ejetar, Verificar com Antivírus etc. Entre estas opções, a opção formatar merece um cuidado especial.</p>
+<p>A formatação de uma unidade de armazenamento é o processo de limpeza onde todos os dados são excluídos definitivamente deixando a unidade com seu espaço livre original.</p>
+
+
+<!-- #endregion -->
+
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
+
