--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   
   <title>Jorge Oliveira Santos</title>
   <link rel="stylesheet" href="css/index.css">
+  <script src="javascript/index.js"></script>
   <link rel="icon" type="image/x-icon" href="logo.svg">
   <meta charset="UTF-8"/>
   <meta name="viewport"  content="width=device-width, initial-scale=1">
@@ -100,43 +101,7 @@
   </div>
 </div>
 
-<div class="js-footer">
-  <div style="min-width: 300px;">
-    <tit>Aprendizado On-Line</tit>
-    <par onclick="window.location.replace(`https://www.jorgesouza.com.br/informatica/intro`)">Informática Básica e Avançada</par>
-    <par onclick="window.location.replace(`#`)">Design Gráfico</par>
-    <par onclick="window.location.replace(`#`)">Web Design (HTML e CSS)</par>
-    <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
-    <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
-    <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
-    <par onclick="window.location.replace(`#`)">Desenvolvimento de Apps Móveis</par>
-    <par onclick="window.location.replace(`#`)">Desenvolvimento de Jogos</par>
-  </div>
-  <div style="min-width: 300px;">
-    <tit>Manuais e Apostilas</tit>
-    <par onclick="window.location.replace(`#`)">Informática Básica e Avançada</par>
-    <par onclick="window.location.replace(`#`)">Design Gráfico</par>
-    <par onclick="window.location.replace(`#`)">Web Design (HTML e CSS)</par>
-    <par onclick="window.location.replace(`#`)">Javascript (Front-End e Back-End)</par>
-    <par onclick="window.location.replace(`#`)">Programação de Gráficos e Multimídia</par>
-    <par onclick="window.location.replace(`#`)">Programação para PC Desktop</par>
-    <par onclick="window.location.replace(`#`)">Desenvolvimento de Apps Móveis</par>
-    <par onclick="window.location.replace(`#`)">Desenvolvimento de Jogos</par>
-  </div>
-  <div style="min-width: 300px;">
-    <tit>Contato</tit>
-    <par onclick="window.open(`mailto:jorge.sos777@gmail.com`)">Gmail</par>
-    <par onclick="window.open(`https://wa.me/5577991161892`)">Whatsapp</par>
-    <par onclick="window.open(`https://join.skype.com/invite/uMbQf0utKfUz`)">Skype</par>
-    <par onclick="window.open(`https://www.facebook.com/artesgraficaseprojetos`)">Facebook</par>
-    <par onclick="window.open(`https://www.instagram.com/jorgeoliveiraonline/`)">Instagram</par>
-    <par onclick="window.open(`https://www.workana.com/freelancer/175498bc00eeda4731ad4044f609f5a5`)">Workana (Freelancer)</par>
-  </div>
-  <div style="min-width: 90%;">
-    <hr style="width: 90%; margin: 25px auto 25px auto">
-    <img src="files/logo_amarela.svg" style="pointer-events: none; border: none; background-color: transparent; width: 40px; display: block; margin: auto; align-self: center;"/>
-    <tit id="copy" style="align-self: center; text-align: center; padding: 20px; display: block;">Copyright © 2022 - Jorge Souza Oliveira dos Santos</tit>
-  </div>
-</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
 
 </html>
