--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
     <a href="#" class="banner"><img id="img1" src="files/capa1.webp" alt=""></a>
   </div>
 
+<div class="flex-grid">
+  <a href="#"><div class="flex-data">
+    <img src="/files/dev.webp" alt="Desenvolvimento de aplicações web, desktop e móvel">
+  </div></a>
+  <a href="#"><div>
+    <img src="/files/books.webp" alt="Livros e apostilas">
+  </div></a>
+  <a href="#"><div>
+    <img src="/files/learn.webp" alt="Aprendizado on-line gratuito">
+  </div></a>
+  <a href="#"><div>
+    <img src="/files/contact.webp" alt="Informações de contato">
+  </div></a>
+</div>
 
 <div>
   <div class="js-post" style="background-image: linear-gradient(#C00, #200); margin: 25px 5% 25px 5%; border: #FB05 1px solid; border-radius: 15px;">
