--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
     <img src="/files/contact.webp" alt="Informações de contato">
   </div></a>
 </div>
+<style>
+  .flex-grid {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+</style>
 
 <div>
   <div class="js-post" style="background-image: linear-gradient(#C00, #200); margin: 25px 5% 25px 5%; border: #FB05 1px solid; border-radius: 15px;">
