--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
     flex-wrap: wrap;
     flex-direction: column;
   }
+  .flex-data a {
+    width: 25%;
+    flex-basis: 100px;
+    flex-grow: 1;
+  }
 </style>
 
 <div>
