--- a/index.html
+++ b/index.html
@@ -44,9 +44,7 @@
 </div>
 <style>
   .flex-grid {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
+    display: grid;
   }
   .flex-data a {
     width: 25%;
