--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
 </div>
 <style>
   .flex-grid {
+    width: 100%;
+    padding: 25px;
     display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
   }
   .flex-data a {
     width: 25%;
