--- a/index.html
+++ b/index.html
@@ -28,19 +28,21 @@
     <a href="#" class="banner"><img id="img1" src="files/capa1.webp" alt=""></a>
   </div>
 
+
+
 <div class="flex-grid">
-  <a href="#"><div class="flex-data">
+  <a href="#" class="flex-data">
     <img src="/files/dev.webp" alt="Desenvolvimento de aplicações web, desktop e móvel">
-  </div></a>
-  <a href="#"><div>
+  </a>
+  <a href="#" class="flex-data">
     <img src="/files/books.webp" alt="Livros e apostilas">
-  </div></a>
-  <a href="#"><div>
+  </a>
+  <a href="#" class="flex-data">
     <img src="/files/learn.webp" alt="Aprendizado on-line gratuito">
-  </div></a>
-  <a href="#"><div>
+  </a>
+  <a href="#" class="flex-data">
     <img src="/files/contact.webp" alt="Informações de contato">
-  </div></a>
+  </a>
 </div>
 <style>
   .flex-grid {
@@ -49,7 +51,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
-  .flex-data a {
+  .flex-data img {
     width: 25%;
     flex-basis: 100px;
     flex-grow: 1;
