--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     width: 100%;
     padding: 25px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(auto-fill, min(200px));
+    gap: 10px;
   }
   .flex-data img {
-    width: 25%;
     flex-basis: 100px;
     flex-grow: 1;
   }
