--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
 
 <div class="flex-grid">
   <a href="#" class="flex-data">
-    <img src="/files/dev.webp" alt="Desenvolvimento de aplicações web, desktop e móvel">
+    <img src="/files/dev.svg" alt="Desenvolvimento de aplicações web, desktop e móvel">
   </a>
   <a href="#" class="flex-data">
-    <img src="/files/books.webp" alt="Livros e apostilas">
+    <img src="/files/books.svg" alt="Livros e apostilas">
   </a>
   <a href="#" class="flex-data">
-    <img src="/files/learn.webp" alt="Aprendizado on-line gratuito">
+    <img src="/files/learn.svg" alt="Aprendizado on-line gratuito">
   </a>
   <a href="#" class="flex-data">
-    <img src="/files/contact.webp" alt="Informações de contato">
+    <img src="/files/contacts.svg" alt="Informações de contato">
   </a>
 </div>
 <style>
@@ -53,8 +53,7 @@
     gap: 10px;
   }
   .flex-data img {
-    flex-basis: 100px;
-    flex-grow: 1;
+    ;
   }
 </style>
 
