--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
     width: 100%;
     padding: 25px;
     display: grid;
-    grid-template-columns: repeat(auto-fill, min(200px));
-    gap: 10px;
   }
-  .flex-data img {
-    ;
+  .flex-data {
+    display: inline-block;
+    width: 25%;
+    min-width: 150px;
   }
 </style>
 
