--- a/informatica/msaccount.html
+++ b/informatica/msaccount.html
@@ -1,1 +1,51 @@
-msaccount
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <script src="info.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="/informatica/google.html" class="js-button">Anterior</a>
+    <a href="/informatica/sitesuteis.html" class="js-button" style="float: right;">Próximo</a>
+
+
+<!-- #region    ============    POST    ===================   -->
+
+<h1>Conta Microsoft</h1>
+<p>	Se você comprou um computador novo já com o Windows instalado, certamente ele veio com uma licença digital do Windows. Um grande erro que muita gente comete é formatar o computador e instalar uma cópia pirata, um erro e crime ao mesmo tempo. Com um endereço de e-mail você pode registrar sua conta da Microsoft e vincular à licença do Windows original à sua conta. Dessa forma, mesmo que você troque de computador futuramente, basta fazer login com sua conta Microsoft no novo computador e ativar sua licença. Caso queira baixar uma versão mais atualizada do Windows acesse: </p>
+<p>	https://www.microsoft.com/pt-br/software-download</p>
+<p>	Neste site você pode baixar até a última versão do Windows. Para criar sua conta da Microsoft para comprar uma licença digital ou vincular sua conta à licença existente no seu computador, acesse:</p>
+<p>	https://account.microsoft.com/</p>
+<p>	Ter uma conta logada em seu computador te oferece ainda outros recursos como sincronização de seus dados e configurações, tanto entre o PC e o celular como na migração de um computador para outro, bem como salvar as senhas dos sites que você precisa acessar com frequência.</p>
+
+<h2>Outlook</h2>
+<p>	Outro serviço de e-mail que você pode utilizar é o Outlook, com o diferencial que você pode usar o aplicativo desktop para sincronizar seus e-mails em plano de fundo e ser alertado sempre que um novo e-mail for recebido.
+
+<!-- #endregion -->
+
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
