--- a/informatica/google.html
+++ b/informatica/google.html
@@ -26,8 +26,8 @@
 <div class="js-page">
 
   <div class="js-post">
-    <a href="https://www.jorgesouza.com.br/informatica/downloadapps" class="js-button">Anterior</a>
-    <a href="https://www.jorgesouza.com.br/informatica/msaccount" class="js-button" style="float: right;">Próximo</a>
+    <a href="/informatica/downloadapps.html" class="js-button">Anterior</a>
+    <a href="/informatica/msaccount.html" class="js-button" style="float: right;">Próximo</a>
 
 
 <!-- #region    ============    POST    ===================   -->
