--- a/informatica/cachecookies.html
+++ b/informatica/cachecookies.html
@@ -1,1 +1,43 @@
-cachecookies
+<!DOCTYPE html>
+<html lang="pt-BR">
+
+<head>
+  <title>Informática - Jorge Souza</title>
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../javascript/index.js"></script>
+  <script src="info.js"></script>
+  <link rel="icon" type="image/x-icon" href="../logo.svg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!--SEO-->
+  <meta name="author" content="Jorge Souza Oliveira dos Santos" />
+  <meta name="description" content="O que é um computador">
+  <meta name="keywords" content="informática, computador, pc, desktop, tecnologia, digital, alfabetizacao digital, introducao a informatica">
+</head>
+
+
+<menu-bar></menu-bar>
+<js-toggle-bar></js-toggle-bar>
+<side-bar-left></side-bar-left>
+
+
+
+
+<div class="js-page">
+
+  <div class="js-post">
+    <a href="/informatica/sitesuteis.html" class="js-button">Anterior</a>
+    <a href="/informatica/msword.html" class="js-button" style="float: right;">Próximo</a>
+
+
+<!-- #region    ============    POST    ===================   -->
+
+
+
+<!-- #endregion -->
+
+
+    </div>
+</div>
+<footer-bar></footer-bar>
+<btn-up></btn-up>
