--- a/informatica/msoffice.html
+++ b/informatica/msoffice.html
@@ -26,7 +26,7 @@
 <div class="js-page">
 
   <div class="js-post">
-    <a href="/informatica/sitesuteis.html" class="js-button">Anterior</a>
+    <a href="/informatica/cachecookies.html" class="js-button">Anterior</a>
     <a href="/informatica/msword.html" class="js-button" style="float: right;">Próximo</a>
 
 
