--- a/informatica/sitesuteis.html
+++ b/informatica/sitesuteis.html
@@ -34,7 +34,7 @@
 
 <h1>Sites Úteis</h1>
 <p>	Existe uma infinidade de sites úteis que nos ajudam a evitar a procrastinação, e até mesmo perigos, algo muito comum para quem está iniciando sua jornada na internet, segue uma lista muito bacana que montei para você:</p>
-<a class="js-button" href="pt.khanacademy.org" target="_blank">pt.khanacademy.org</a>
+<a class="js-button" href="https://pt.khanacademy.org" target="_blank">pt.khanacademy.org</a>
 <p>	Este certamente deveria estar no topo da lista, a Khan Academy é uma ong que oferece ensino gratuito para quase tudo, desde reforço nas suas aulas de matemática até ciência da computação!</p>
 <a class="js-button" href="https://www.behance.net/" target="_blank">https://www.behance.net/</a>
 <p>	O Behance é um serviço gratuito de portfólio da Adobe, nele você pode publicar seus trabalhos com Design Gráfico e buscar inspiração com milhares de trabalhos belíssimos que outros designers postam cotidianamente.</p>
