--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -72,9 +72,21 @@
     <p>	Os estilos de parágrafo incluem listas ordenadas e não ordenadas, espaçamentos e tabulações, alinhamento, bordas etc.:</p>
 
 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
-  <div style="grid-column: 1; padding: 25px; background-color: aqua;">Jorge</div>
-  <div style="grid-column: 2; padding: 25px; background-color: blueviolet;">Souza</div>
-  <div style="grid-column: 3; padding: 25px; background-color: brown;">Oliveira</div>
+  <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
+    <p style="inherits: unset;">
+      Jorge
+    </p>
+  </div>
+  <div style="grid-column: 2; padding: 25px; background-color: #aaa;">
+    <p style="inherits: unset;">
+      Jorge
+    </p>
+  </div>
+  <div style="grid-column: 3; padding: 25px; background-color: #ddd;">
+    <p style="inherits: unset;">
+      Jorge
+    </p>
+  </div>
 </div>
 
 <!-- #endregion -->
