--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -73,19 +73,25 @@
 
 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
-    <p style="inherits: unset;">
-      Jorge
-    </p>
+    <pre style="text-align: left;">
+      Este é um
+      exemplo de parágrafo
+      alinhado à esquerda.
+    </pre>
   </div>
   <div style="grid-column: 2; padding: 25px; background-color: #aaa;">
-    <p style="inherits: unset;">
-      Jorge
-    </p>
+    <pre style="text-align: center;">
+      Este é um
+      exemplo de parágrafo
+      centralizado.
+    </pre>
   </div>
   <div style="grid-column: 3; padding: 25px; background-color: #ddd;">
-    <p style="inherits: unset;">
-      Jorge
-    </p>
+    <pre style="text-align: right;">
+      Este é um
+      exemplo de parágrafo
+      alinhado à direita.
+    </pre>
   </div>
 </div>
 
