--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -95,6 +95,25 @@
   </div>
 </div>
 
+<div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
+  <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
+    <ul>
+      • Esta é
+      • uma lista
+      • não ordenada
+    </ul>
+  </div>
+  <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
+    <ol>
+      1. Esta é
+      2. uma lista
+      3. ordenada
+    </ol>
+  </div>
+</div>
+
+
+
 <!-- #endregion -->
 
 
