--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -112,7 +112,9 @@
   </div>
 </div>
 
+<p class="notas">O ícone de pincel na barra da área de transferência (Pincel de Formatação) serve para copiar o estilo de formatação de um texto para outro. Está presente em praticamente todos os aplicativos do Office. É possível também copiar o estilo de formatação com o atalho Ctrl+Shift+C e colar em outro texto com o atalho Ctrl+Shift+V.</p>
 
+<img src="exercicio.png">
 
 <!-- #endregion -->
 
