--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -73,21 +73,21 @@
 
 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
-    <pre style="text-align: left;">
+    <pre style="text-align: left; font-weight: bold; font-size: larger;">
       Este é um
       exemplo de parágrafo
       alinhado à esquerda.
     </pre>
   </div>
   <div style="grid-column: 2; padding: 25px; background-color: #aaa;">
-    <pre style="text-align: center;">
+    <pre style="text-align: center; font-weight: bold; font-size: larger;">
       Este é um
       exemplo de parágrafo
       centralizado.
     </pre>
   </div>
   <div style="grid-column: 3; padding: 25px; background-color: #ddd;">
-    <pre style="text-align: right;">
+    <pre style="text-align: right; font-weight: bold; font-size: larger;">
       Este é um
       exemplo de parágrafo
       alinhado à direita.
@@ -97,18 +97,14 @@
 
 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
-    <ul>
       • Esta é
       • uma lista
       • não ordenada
-    </ul>
   </div>
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
-    <ol>
       1. Esta é
       2. uma lista
       3. ordenada
-    </ol>
   </div>
 </div>
 
