--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -112,6 +112,24 @@
 
 <img src="exercicio.png">
 
+<p>	Para nosso primeiro exercício, digite o texto abaixo. Em seguida formataremos, desta vez incluindo tabulações e estilos. Assim que abrir o Word em seu PC ou o Word on-line em Office.com e iniciar um novo arquivo, salve o arquivo com o nome Inteligência Artificial em sua pasta em Documentos ou em sua pasta no Drive. Para usar o Office on-line é preciso estar logado em sua conta Microsoft.</p>
+
+<div style="background-color: #321; margin: 15px; padding: 15px;">
+<h3>O que é inteligência Artificial</h3>
+  <p>	Inteligência artificial é a capacidade de dispositivos eletrônicos de funcionar de maneira que lembra o pensamento humano.</p>
+  <p>	Isso implica perceber variáveis, tomar decisões e resolver problemas. Enfim, operar em uma lógica que remete ao raciocínio.</p>
+  <p>“Artificial”, segundo o dicionário Michaelis, é algo que foi “produzido por arte ou indústria do homem e não por causas naturais”.</p>
+  <p>	Já “Inteligência” é a “faculdade de entender, pensar, raciocinar e interpretar”. Ou o “conjunto de funções mentais que facilitam o entendimento das coisas e dos fatos”.</p>
+  <p>	No mesmo dicionário, há duas definições da Psicologia para a palavra “inteligência”:</p>
+      <p>• Habilidade de aproveitar a eficácia de uma situação e utilizá-la na prática de outra atividade</p>
+      <p>• Capacidade de resolver situações novas com rapidez e êxito, adaptando-se a elas por meio do conhecimento adquirido.</p>
+  <p>	Mesmo essas duas últimas definições fazem sentido quando falamos em inteligência artificial, com a vertente chamada de machine learning (aprendizado de máquina).</p>
+  <p>	Enfim, a inteligência artificial é desenvolvida para que os dispositivos criados pelo homem possam desempenhar determinadas funções sem a interferência humana.</p>
+  <p>	E quais são essas funções? A cada dia que passa, a resposta a essa pergunta é maior.</p>
+  <p>	Tentaremos responder mais adiante, dando exemplos de aplicações da inteligência artificial.</p>
+</div>
+
+
 <!-- #endregion -->
 
 
