--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -95,16 +95,22 @@
   </div>
 </div>
 
+<br>
+
 <div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
+    <pre style="text-align: left; font-weight: bold; font-size: larger;">
       • Esta é
       • uma lista
       • não ordenada
+    </pre>
   </div>
-  <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
+  <div style="grid-column: 3; padding: 25px; background-color: #ddd;">
+    <pre style="text-align: right; font-weight: bold; font-size: larger;">
       1. Esta é
       2. uma lista
       3. ordenada
+    </pre>
   </div>
 </div>
 
