--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -120,7 +120,7 @@
 
 <p>	Para nosso primeiro exercício, digite o texto abaixo. Em seguida formataremos, desta vez incluindo tabulações e estilos. Assim que abrir o Word em seu PC ou o Word on-line em Office.com e iniciar um novo arquivo, salve o arquivo com o nome Inteligência Artificial em sua pasta em Documentos ou em sua pasta no Drive. Para usar o Office on-line é preciso estar logado em sua conta Microsoft.</p>
 
-<div style="background-color: #321; margin: 15px; padding: 15px;">
+<div style="background-color: black; margin: 15px; padding: 15px;">
 <h3>O que é inteligência Artificial</h3>
   <p>	Inteligência artificial é a capacidade de dispositivos eletrônicos de funcionar de maneira que lembra o pensamento humano.</p>
   <p>	Isso implica perceber variáveis, tomar decisões e resolver problemas. Enfim, operar em uma lógica que remete ao raciocínio.</p>
