--- a/informatica/msword.html
+++ b/informatica/msword.html
@@ -71,7 +71,7 @@
     <h2>Estilos de Parágrafo</h2>
     <p>	Os estilos de parágrafo incluem listas ordenadas e não ordenadas, espaçamentos e tabulações, alinhamento, bordas etc.:</p>
 
-<div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
+  <div style="display: grid; grid-template-columns: repeat(auto-fill);">
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
     <pre style="text-align: left; font-weight: bold; font-size: larger;">
       Este é um
@@ -97,16 +97,16 @@
 
 <br>
 
-<div style="display: grid; grid-template-columns: 1fr 1fr 1fr;">
+<div style="display: grid; grid-template-columns: repeat(auto-fill);">
   <div style="grid-column: 1; padding: 25px; background-color: #ddd;">
-    <pre style="text-align: left; font-weight: bold; font-size: larger;">
+    <pre style="font-weight: bold; font-size: larger;">
       • Esta é
       • uma lista
       • não ordenada
     </pre>
   </div>
   <div style="grid-column: 3; padding: 25px; background-color: #ddd;">
-    <pre style="text-align: right; font-weight: bold; font-size: larger;">
+    <pre style="font-weight: bold; font-size: larger;">
       1. Esta é
       2. uma lista
       3. ordenada
